# UIED

./: Meta.py  README.md  buildup.py  merge.py  run_single.py  run_testing(Used for Adjusting).py
Metadata/: buildup.py
Metadata/source_files/: UR5_tester.code-workspace
Metadata/source_files/GUI/: corner_select.py  corner_select3.py
UR5_tester/: my_robot_calibration.yaml
UR5_tester/ctl_interface_msgs/: CMakeLists.txt  package.xml
UR5_tester/ctl_interface_msgs/action/: PressScreenCoordinate.action
UR5_tester/source_files/: CalibrateCamera.py  interfacetester.py  pos.txt  ur5_tester_main.py
UR5_tester/source_files/Functions/: __init__.py  img_functions.py  img_functions3.py
UR5_tester/source_files/GUI/: Scripter.py  __init__.py
UR5_tester/source_files/ctl_interface/: Ctl_interface.py  __init__.py
cnn/: CNN.py  Config.py  Data.py  predict.py  train.py
config/: CONFIG.py  CONFIG_UIED.py
detect_compo/: ip_region_proposal.py
detect_compo/lib_ip/: Bbox.py  Component.py  ip_detection.py  ip_preprocessing.py
detect_text_east/lib_east/: data_util.py  icdar.py  model.py
detect_text_east/lib_east/lanms/: __init__.py
detect_text_east/lib_east/nets/: resnet_utils.py
lib_east/: eval.py
lib_east/lanms/: Makefile
utils/: Element.py  util_merge.py
